# Minerva

./: .gitignore  ACKNOWLEDGEMENTS.txt  AGENTS.md  CHANGELOG.md  CHANGELOG.txt  README.md  TODO.txt  build_sdl_lib.sh  check_load.sh  debug_tests.sh  minerva.asd  minerva.lisp  package.lisp  run_smoke.sh  run_tests.sh
MinervaC/: MinervaC.cbp  MinervaC.depend  MinervaC.layout  main.c
MinervaPython/: main.py  requirements.txt
SDL3/: CMakeLists.txt  TODO.txt  compile.sh  documentation.txt  example.lisp  hello  sdl.kdev4  sdl_wrapper.c  widgets.ods  widgets.txt
SDL_LIB/: CMakeLists.txt  SDL3.kdev4  SDL_LIB.kdev4  compile.sh  documentation.txt  example.lisp  hello  hello.c  sdl_wrapper.c  wrapper_test.c
demos/: background-color.lisp  blue-rectangle-demo.lisp  button-command-demo.lisp  button-demo.lisp  centered-image-demo.lisp  centered-label-demo.lisp  expand-hbox-margins-demo.lisp  expand-vbox-margins-demo.lisp  menu-demo.lisp  menubar-demo.lisp  nine-patch-image-demo.lisp  overlay-menu-demo.lisp  scrollbar-demo.lisp  show-events.lisp  stacked-hboxes-in-vbox-demo.lisp  template-demo.lisp  text-editor-demo.lisp
docs/: Makefile  TODO.txt  TODO.txt~  conf.py  getting-started.rst  index.rst  notes.txt
examples/: base_example.lisp
minerva/: minerva.lisp
native/: CMakeLists.txt  README.md
native/include/: minerva_native.h
native/src/: minerva_native.c
native/tests/: smoke_native.c
plans/: events1.md  events2.md  milestone1.md  milestone2.md  milestone3.md  milestone3_tests,md  milestone4.md  milestone5.md  milestone6.md  milestone7.md  project.md  tests.md  (+4 more)
(+147 files in other folders)
